Use new jvm gc arg